--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "@adam.biltcliffe/board-state-playground": "^0.0.2"
+    "@adam.biltcliffe/board-state-playground": "^0.0.2",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0"
   }
 }
