--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Game rules engine for Codex by Sirlin Games",
   "main": "src/index.js",
+  "files": [
+    "/src"
+  ],
   "scripts": {
     "playground": "board-state-playground --entry ./playground.jsx",
     "test": "jest",
@@ -16,10 +19,10 @@
   "dependencies": {
     "board-state": "^0.1.1",
     "knuth-shuffle": "^1.0.8",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@adam.biltcliffe/board-state-playground": "^0.0.2",
+    "@adam.biltcliffe/board-state-playground": "^0.0.3",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-jest": "^24.8.0",
