--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "@adam.biltcliffe/codex",
   "version": "0.1.0",
   "description": "Game rules engine for Codex by Sirlin Games",
-  "main": "src/index.js",
+  "main": "dist/main/index.js",
+  "browser": "./dist/browser/index.js",
+  "module": "./dist/module/index.js",
   "files": [
-    "/src"
+    "/dist"
   ],
   "scripts": {
+    "build-browser": "cross-env BABEL_ENV=browser babel ./src --out-dir ./dist/browser --source-maps",
+    "build-module": "cross-env BABEL_ENV=module babel ./src --out-dir ./dist/module --source-maps",
+    "build-node": "babel ./src --out-dir ./dist/main --source-maps",
+    "build": "npm run clean && npm run build-node && npm run build-browser && npm run build-module",
+    "clean": "shx rm -rf dist",
     "playground": "board-state-playground --entry ./playground.jsx",
     "test": "jest",
     "test-watch": "jest --watch"
@@ -24,9 +31,12 @@
   },
   "devDependencies": {
     "@adam.biltcliffe/board-state-playground": "^0.0.3",
+    "@babel/cli": "^7.6.0",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-jest": "^24.8.0",
-    "jest": "^24.8.0"
+    "cross-env": "^5.2.1",
+    "jest": "^24.8.0",
+    "shx": "^0.3.2"
   }
 }
