--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@adam.biltcliffe/codex",
   "version": "0.1.0",
   "description": "Game rules engine for Codex by Sirlin Games",
-  "main": "dist/main/index.js",
+  "main": "./dist/main/index.js",
   "browser": "./dist/browser/index.js",
   "module": "./dist/module/index.js",
   "files": [
