--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npm run clean && npm run build-node && npm run build-browser && npm run build-module",
     "clean": "shx rm -rf dist",
     "playground": "board-state-playground --entry ./playground.jsx",
+    "prepare": "npm run build",
     "test": "jest --verbose false",
     "test-bail": "jest --bail --verbose false",
     "test-watch": "jest --watch"
