--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-node": "babel ./src --out-dir ./dist/main --source-maps",
     "build": "npm run clean && npm run build-node && npm run build-browser && npm run build-module",
     "clean": "shx rm -rf dist",
+    "lint": "eslint src/. --config .eslintrc.json",
     "playground": "board-state-playground --entry ./playground.jsx",
     "prepare": "npm run build",
     "test": "jest --verbose false",
@@ -38,7 +39,11 @@
     "@babel/preset-env": "^7.6.3",
     "babel-jest": "^24.9.0",
     "cross-env": "^5.2.1",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
+    "prettier": "^1.19.1",
     "shx": "^0.3.2"
   }
 }
